--- a/src/Core/Domain/DonghuaFlix.Core.Domain.csproj
+++ b/src/Core/Domain/DonghuaFlix.Core.Domain.csproj
@@ -10,4 +10,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
 </Project>
